<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anemos Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="addUser">!</string>
    <string name="schedule">Weekly Schedule</string>
    <string name="userlist">User list</string>
    <string name="eventlist">Event list</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="job">Job</string>
    <string name="spinner2promt">"--Choose a person--"</string>
    <string name="calendar">Calendar</string>
    <string name="meeting">Create a meeting</string>
    <string name="username">Enter new usename</string>
    <string name="password">Enter password</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
 
    <string name="situation_promt">Choose a situation</string>
	  <string-array name="situation">
	      <item >--Choose a situation--</item>
        <item>Day</item>
        <item>Night</item>
    	 </string-array>
    	 
	  <string name="position_promt">Choose a position</string>
	  <string-array name="position">
	      <item >--Choose a position--</item>
        <item>Bar</item>
        <item>Service</item>
        <item>Service 2nd</item>
        <item>Kitchen</item>
        <item>Dj</item>
        <item>PR</item>
    	 </string-array>
</resources>
